--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,8 @@
-<% provide(:title, 'Home') %>
+<% provide(:title, 'About Us') %>
 
 <h1>Sample App</h1>
 <p>
-  This is the home page for the
+  This is the About Us page for the
   <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
   sample application.
 </p>
